# root

./: .gitmodules  CMakeLists.txt
.github/workflows/: cling-test.yml  root-ci.yml  sync_cling.yml
.github/workflows/root-ci-config/: build_root.py
.github/workflows/root-ci-config/buildconfig/: global.txt
.github/workflows/utilities/: sync_cling.py
bindings/pyroot/cppyy/cppyy-backend/cling/: create_src_directory.py
bindings/pyroot/pythonizations/test/: import_load_libs.py
cmake/modules/: RootBuildOptions.cmake  RootMacros.cmake  SearchInstalledSoftware.cmake
core/: CMakeLists.txt  README
core/base/inc/: TApplication.h
core/base/src/: TApplication.cxx  TROOT.cxx
core/base/v7/inc/ROOT/: RIndexIter.hxx
core/clingutils/: CMakeLists.txt
core/clingutils/res/: TClingUtils.h
core/clingutils/src/: TClingUtils.cxx
core/clingutils/test/: CMakeLists.txt  TClingUtilsTests.cxx
core/dictgen/src/: Scanner.cxx  TModuleGenerator.cxx  rootcling_impl.cxx
core/metacling/src/: CMakeLists.txt  TCling.cxx  TClingCallFunc.cxx  TClingCallbacks.cxx  TClingCallbacks.h  TClingClassInfo.cxx  TClingDataMemberInfo.cxx  TClingDataMemberInfo.h  TClingMethodInfo.cxx
core/rint/: CMakeLists.txt
core/rint/inc/: LinkDef.h  TRint.h
core/rint/src/: TRint.cxx
core/rint/test/: CMakeLists.txt  TTabComTests.cxx
core/textinput/: CMakeLists.txt
core/textinput/inc/: Getline.h
core/textinput/src/: Getline.cxx
core/unix/src/: TUnixSystem.cxx
core/winnt/src/: TWinNTSystem.cxx
documentation/doxygen/: makeinput.sh
etc/: gdb-backtrace.sh
interpreter/: CMakeLists.txt
interpreter/CppInterOp/: CMakeLists.txt
interpreter/CppInterOp/lib/CppInterOp/: CXCppInterOp.cpp  CppInterOp.cpp
interpreter/CppInterOp/lib/Interpreter/: Compatibility.h
interpreter/cling/: CMakeLists.txt
interpreter/cling/cmake/modules/: CMakeLists.txt
interpreter/cling/include/cling/: libc.modulemap  std_darwin.modulemap
interpreter/cling/include/cling/Interpreter/: Interpreter.h  RuntimePrintValue.h
interpreter/cling/include/cling/Utils/: Casting.h
interpreter/cling/lib/Interpreter/: AutoloadCallback.cpp  BackendPasses.cpp  BackendPasses.h  CIFactory.cpp  CMakeLists.txt  DeclCollector.cpp  DeclExtractor.cpp  DeclUnloader.cpp  DefinitionShadower.cpp  DynamicLookup.cpp  ExternalInterpreterSource.cpp  ExternalInterpreterSource.h  ForwardDeclPrinter.cpp  IncrementalExecutor.cpp  IncrementalExecutor.h  IncrementalJIT.cpp  IncrementalParser.cpp  IncrementalParser.h  Interpreter.cpp  InterpreterCallbacks.cpp  LookupHelper.cpp  Transaction.cpp  Value.cpp  ValueExtractionSynthesizer.cpp  ValuePrinter.cpp  ValuePrinterSynthesizer.cpp
interpreter/cling/lib/MetaProcessor/: MetaSema.cpp
interpreter/cling/lib/UserInterface/: UserInterface.cpp
interpreter/cling/lib/Utils/: AST.cpp  CMakeLists.txt  SourceNormalization.cpp
interpreter/cling/test/Driver/: CommandHistory.C
interpreter/cling/test/Driver/Inputs/: cling_history
interpreter/cling/test/Prompt/ValuePrinter/: SourceLocation.C
interpreter/cling/tools/driver/: CMakeLists.txt
interpreter/cling/tools/libcling/: CMakeLists.txt
interpreter/cling/tools/plugins/: CMakeLists.txt
interpreter/cling/tools/plugins/adaptivecpp/: CMakeLists.txt
interpreter/cling/tools/plugins/adaptivecpp/patches/: 0001-Handle-Expected-T-from-TempFile-create-to-prevent-po.patch  0001-Temporary-commit.patch
interpreter/cling/tools/plugins/clad/: CMakeLists.txt
interpreter/cling/tools/plugins/clad/patches/: 0001-Revert-DSO-self-resolution-for-backend-pass-registra.patch
interpreter/llvm-project/clang/docs/: LanguageExtensions.rst  ReleaseNotes.rst
interpreter/llvm-project/clang/include/clang/AST/: Decl.h  DeclTemplate.h  ExternalASTSource.h
interpreter/llvm-project/clang/include/clang/Basic/: Builtins.def
interpreter/llvm-project/clang/include/clang/CodeGen/: ModuleBuilder.h
interpreter/llvm-project/clang/include/clang/Frontend/: FrontendAction.h
interpreter/llvm-project/clang/include/clang/Lex/: Preprocessor.h
interpreter/llvm-project/clang/include/clang/Parse/: Parser.h
interpreter/llvm-project/clang/include/clang/Sema/: Sema.h
interpreter/llvm-project/clang/include/clang/Serialization/: ASTBitCodes.h  ASTReader.h  ASTWriter.h
interpreter/llvm-project/clang/lib/AST/: ASTImporter.cpp  DeclTemplate.cpp  ExprConstant.cpp  ExternalASTSource.cpp  ODRHash.cpp  QualTypeNames.cpp
interpreter/llvm-project/clang/lib/Basic/: FileManager.cpp  SourceManager.cpp
interpreter/llvm-project/clang/lib/CodeGen/: CGBuiltin.cpp  CodeGenModule.cpp  CodeGenModule.h  ModuleBuilder.cpp
interpreter/llvm-project/clang/lib/Frontend/: FrontendAction.cpp
interpreter/llvm-project/clang/lib/Interpreter/: IncrementalParser.cpp  Interpreter.cpp
interpreter/llvm-project/clang/lib/Lex/: HeaderSearch.cpp
interpreter/llvm-project/clang/lib/Parse/: ParseDeclCXX.cpp  ParsePragma.cpp  Parser.cpp
interpreter/llvm-project/clang/lib/Sema/: MultiplexExternalSemaSource.cpp  Sema.cpp  SemaDecl.cpp  SemaDeclCXX.cpp  SemaExpr.cpp  SemaExprCXX.cpp  SemaTemplate.cpp  SemaTemplateInstantiate.cpp  SemaType.cpp
interpreter/llvm-project/clang/lib/Serialization/: ASTReader.cpp  ASTReaderDecl.cpp  ASTReaderInternals.h  ASTWriter.cpp  ASTWriterDecl.cpp  TemplateArgumentHasher.cpp
interpreter/llvm-project/llvm/lib/IR/: ConstantsContext.h
interpreter/llvm-project/llvm/tools/lli/: lli.cpp
net/netxng/inc/: TNetXNGFile.h
roottest/cling/sycl/: CMakeLists.txt  syclbasic.C  syclbasic.ref
roottest/root/meta/templateUnload/: CMakeLists.txt  LinkDef.h  secondStaticAssert.h  secondStaticAssertTest.C  secondStaticAssertTest.ref
tree/dataframe/inc/ROOT/RDF/: InterfaceUtils.hxx
tree/dataframe/src/: RDFInterfaceUtils.cxx
tree/ntuple/inc/ROOT/: RFieldBase.hxx  RNTupleAttrReading.hxx  RNTupleReader.hxx  RPageStorage.hxx  RPageStorageFile.hxx
tree/ntuple/src/: RNTupleAttrReading.cxx  RNTupleAttrWriting.cxx  RNTupleReader.cxx  RPageStorage.cxx  RPageStorageFile.cxx
tree/ntuple/test/: ntuple_attributes.cxx
tree/ntuple/v7/inc/ROOT/: RNTupleMetrics.hxx
(+8 files in other folders)
